[package]
name = "aish"
version = "0.1.0"
edition = "2024"

[dependencies]
rustyline = { version = "14.0", features = ["custom-bindings"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
# serde_yaml = "0.9"  # Replaced with TypeScript configuration
dirs = "5.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
thiserror = "1.0"
# Deno TypeScript runtime dependencies (2024 stable versions)
deno_core = "0.340.0"
deno_runtime = "0.202.0"
deno_error = "0.5.5"
serde_v8 = "0.249.0"
lazy_static = "1.4"
regex = "1.5"
url = "2.3"
tempfile = "3.8"
