[package]
name = "aish"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyline = { version = "16.0.0", features = ["custom-bindings"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

dirs = "6.0.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde_json = "1.0"
thiserror = "2.0.12"

deno_core = "0.350.0"
deno_error = "0.6.1"
serde_v8 = "0.259.0"
deno_ast = { version = "0.48.0", features = ["transpiling"] }

lazy_static = "1.4"
regex = "1.5"
url = "2.3"
tempfile = "3.8"
